Change name from "Minimal PWA" to "Let's Build a PWA"

--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Minimal PWA",
-  "name": "Minimal PWA",
+  "name": "Let's Build a PWA",
   "icons": [
     {
       "src": "min-pwa.png",
